--- a/src/add.html
+++ b/src/add.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>INDEX</title>
+    <title>ADD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="scss/main.scss">
     <script src="js/main.js" type="module"></script>
