--- a/src/add.html
+++ b/src/add.html
@@ -5,18 +5,22 @@
     <meta charset="utf-8">
     <title>ADD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="scss/main.scss">
+    <link rel="stylesheet" href="css/main.scss">
     <script src="js/main.js" type="module"></script>
 </head>
 
 <body>
     <header>
+        <img src="images/logo_jeja.svg" alt="logo for creater">
     </header>
 
     <main>
     </main>
 
     <footer>
+        <img src="images/logo_jeja.svg" alt="logo for creater">
+        <p>Copyright Jennifer Jakobsson, 2024<br>
+            dt207g Backend-baserad webbutveckling</p>
     </footer>
 </body>
 
