updated some style

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,19 @@
 <body>
     <header>
         <img src="images/logo_jeja.svg" alt="logo for creater">
+        <nav>
+            <ul>
+                <li id="position"><a href="index.html">CV</a></li>
+                <li><a href="add.html">ADDERA TILL CV</a></li>
+                <li><a href="about.html">OM WEBBPLATSEN</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
         <div>
-        <p>hej</p>
-    </div>
+            <p></p>
+        </div>
     </main>
 
     <footer>
