--- a/src/add.html
+++ b/src/add.html
@@ -7,11 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.scss">
     <script src="js/main.js" type="module"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
     <header>
         <img src="images/logo_jeja.svg" alt="logo for creater">
+        <nav>
+            <ul>
+                <li><a class="material-symbols-outlined" href="index.html">work</a></li>
+                <li><a id="position" class="material-symbols-outlined" href="add.html">add_box</a></li>
+                <li><a class="material-symbols-outlined" href="about.html">info</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
