--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.scss">
     <script src="js/main.js" type="module"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
@@ -14,9 +15,9 @@
         <img src="images/logo_jeja.svg" alt="logo for creater">
         <nav>
             <ul>
-                <li id="position"><a href="index.html">CV</a></li>
-                <li><a href="add.html">ADDERA TILL CV</a></li>
-                <li><a href="about.html">OM WEBBPLATSEN</a></li>
+                <li><a id="position" class="material-symbols-outlined" href="index.html">work</a></li>
+                <li><a class="material-symbols-outlined" href="add.html">add_box</a></li>
+                <li><a class="material-symbols-outlined" href="about.html">info</a></li>
             </ul>
         </nav>
     </header>
