written code for fetching data from api

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
     </header>
 
     <main>
-        <div>
-            <p></p>
+        <div id="result">
+        
         </div>
     </main>
 
