added a form to add-page

--- a/src/add.html
+++ b/src/add.html
@@ -23,6 +23,20 @@
     </header>
 
     <main>
+        <form id="addform">
+            <label for="companyname">Arbetsplats</label>
+            <input type="text" name="companyname" id="companyname" placeholder="Namn på arbetsgivare">
+            <br>
+            <label for="jobtitle">Arbetstitel</label>
+            <input type="text" name="jobtitle" id="jobtitle" placeholder="Din arbetsroll">
+            <br>
+            <label for="location">Var</label>
+            <input type="text" name="location" id="location" placeholder="Var fanns arbetsplatsen">
+            <br>
+            <label for="description">Beskrivning</label><br>
+            <textarea rows="4" cols="50" name="description" id="description" placeholder="Beskriv dina arbetssysslor">
+        </form>
+        <button id="addbtn">Lägg till</button>
     </main>
 
     <footer>
