--- a/src/add.html
+++ b/src/add.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.scss">
     <script src="js/main.js" type="module"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
@@ -23,18 +24,24 @@
     </header>
 
     <main>
+        <h1>Lägg till arbetserfarenhet</h1>
         <form id="addform">
-            <label for="companyname">Arbetsplats</label>
-            <input type="text" name="companyname" id="companyname" placeholder="Namn på arbetsgivare">
-            <br>
-            <label for="jobtitle">Arbetstitel</label>
-            <input type="text" name="jobtitle" id="jobtitle" placeholder="Din arbetsroll">
-            <br>
-            <label for="location">Var</label>
-            <input type="text" name="location" id="location" placeholder="Var fanns arbetsplatsen">
-            <br>
-            <label for="description">Beskrivning</label><br>
-            <textarea rows="4" cols="50" name="description" id="description" placeholder="Beskriv dina arbetssysslor">
+            <div>
+                <label for="companyname">Arbetsplats</label><br>
+                <input type="text" name="companyname" id="companyname" placeholder="Namn på arbetsgivare">
+            </div>
+            <div>
+                <label for="jobtitle">Arbetstitel</label><br>
+                <input type="text" name="jobtitle" id="jobtitle" placeholder="Din arbetsroll">
+            </div>
+            <div>
+                <label for="location">Var</label><br>
+                <input type="text" name="location" id="location" placeholder="Var fanns arbetsplatsen">
+            </div>
+            <div>
+                <label for="description">Beskrivning</label><br>
+                <textarea rows="4" cols="50" name="description" id="description">
+            </div>
         </form>
         <button id="addbtn">Lägg till</button>
     </main>
