--- a/src/add.html
+++ b/src/add.html
@@ -9,6 +9,7 @@
     <script src="js/add.js" type="module"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -27,23 +28,25 @@
         <h1>Lägg till arbetserfarenhet</h1>
         <form id="addform">
             <div>
-                <label for="companyname">Arbetsplats</label><br>
+                <label for="companyname">Arbetsgivare:</label><br>
                 <input type="text" name="companyname" id="companyname" placeholder="Namn på arbetsgivare">
             </div>
             <div>
-                <label for="jobtitle">Arbetstitel</label><br>
-                <input type="text" name="jobtitle" id="jobtitle" placeholder="Din arbetsroll">
+                <label for="jobtitle">Arbetsroll:</label><br>
+                <input type="text" name="jobtitle" id="jobtitle" placeholder="Titel på arbetsroll">
             </div>
             <div>
-                <label for="location">Var</label><br>
-                <input type="text" name="location" id="location" placeholder="Var fanns arbetsplatsen">
+                <label for="location">Lokalisering för arbete:</label><br>
+                <input type="text" name="location" id="location" placeholder="Ort för arbete">
             </div>
             <div>
-                <label for="description">Beskrivning</label><br>
-                <textarea rows="4" cols="50" name="description" id="description">
+                <label for="description">Beskrivning av arbete:</label><br>
+                <textarea type="text" rows="4" cols="50" name="description" placeholder="Beskriv din arbetsroll här..." id="description"></textarea>
             </div>
         </form>
-        <button id="addbtn">Lägg till</button>
+        <div id="addbtn">
+            <button class="material-symbols-outlined">add</button>
+        </div>
     </main>
 
     <footer>
