--- a/src/add.html
+++ b/src/add.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <img src="images/logo_jeja.svg" alt="logo for creater">
+        <img src="images/logo_jeja.svg" id="logo" alt="logo for creator">
         <nav>
             <ul>
                 <li><a class="material-symbols-outlined" href="index.html">work</a></li>
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <img src="images/logo_jeja.svg" alt="logo for creater">
+        <img src="images/logo_jeja.svg" alt="logo for creator">
         <p>Copyright Jennifer Jakobsson, 2024<br>
             dt207g Backend-baserad webbutveckling</p>
     </footer>
