--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <img src="images/logo_jeja.svg" alt="logo for creater">
+        <img src="images/logo_jeja.svg" id="logo" alt="logo for creator">
         <nav>
             <ul>
                 <li><a id="position" class="material-symbols-outlined" href="index.html">work</a></li>
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <img src="images/logo_jeja.svg" alt="logo for creater">
+        <img src="images/logo_jeja.svg" alt="logo for creator">
         <p>Copyright Jennifer Jakobsson, 2024<br>
             dt207g Backend-baserad webbutveckling</p>
     </footer>
