--- a/src/about.html
+++ b/src/about.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/main.scss">
     <script src="js/main.js" type="module"></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
 
 <body>
@@ -21,7 +22,24 @@
             </ul>
         </nav>
     </header>
+
     <main>
+        <section>
+            <h1>Introduktion till webbtjänster</h1>
+            <div id="text container">
+                <p>I denna laboration har jag skapat en webbplats som använder Fetch API för att hämta, skicka och
+                    radera data till och från en webbtjänst. Jag har använt mig utav PostgreSQL för att skapa
+                    webbtjänsten.
+                    <br><br>
+                    I tidigare laborationer har vi arbetat mycket med Fetch API men detta skapade en större förståelse
+                    för processen då man varit den som både gjort datan tillgänglig och också hämtat den. Detta gjorde
+                    också det hela lättare, kodmässigt, då man visste mer exakt vad som skulle efterfrågas med korrekta
+                    felmeddelanden.
+                    <br><br>
+                    <span class="material-symbols-outlined">cloud</span>
+                </p>
+            </div>
+        </section>
     </main>
 
     <footer>
