added fade keyframe

--- a/src/add.html
+++ b/src/add.html
@@ -27,6 +27,7 @@
 
     <main>
         <h1>Lägg till arbetserfarenhet</h1>
+        <div id="fade">
         <form id="addform">
             <div>
                 <label for="companyname">Arbetsgivare:</label><br>
@@ -45,6 +46,7 @@
                 <textarea type="text" rows="4" cols="50" name="description" placeholder="Beskriv din arbetsroll här..." id="description"></textarea>
             </div>
         </form>
+        </div>
         <div id="addbtn">
             <button class="material-symbols-outlined">add</button>
         </div>
