--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,9 @@
     <main>
         <div id="result">
         <h1>Mina arbetserfarenheter</h1>
+        <div id="fade">
+
+        </div>
         </div>
     </main>
 
